Bumped to v25.06 Updated to Java 25 Added Pagination to ButtonInteraction.javan Added back About.java
Signed-off-by: dumbdemon <20498145+dumbdemon@users.noreply.github.com>